--- a/to-do-list/angular.json
+++ b/to-do-list/angular.json
@@ -28,7 +28,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/assets/css/styles.scss"
+              "src/styles.scss"
             ],
             "scripts": []
           },
