--- a/to-do-list/package.json
+++ b/to-do-list/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://tifurt.github.io/to-do-list-pages/",
   "name": "to-do-list",
   "version": "0.0.0",
   "scripts": {
@@ -27,6 +28,7 @@
     "@angular/cli": "~14.1.2",
     "@angular/compiler-cli": "^14.1.0",
     "@types/jasmine": "~4.0.0",
+    "angular-cli-ghpages": "^1.0.3",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
